--- a/discovery-service.yaml
+++ b/discovery-service.yaml
@@ -1,10 +1,11 @@
+server:
+  port: ${SERVER_PORT:8761}
+
 eureka:
   instance:
-    hostname: localhost
+    hostname: ${EUREKA_HOSTNAME:localhost}
   client:
     register-with-eureka: false
     fetch-registry: false
     service-url:
       defaultZone: http://${eureka.instance.hostname}/${server.port}/eureka/
-server:
-  port: 8761
