fix for places-service

--- a/places-service.yaml
+++ b/places-service.yaml
@@ -21,6 +21,12 @@ spring:
     redis:
       time-to-live: 600000
       cache-null-values: false
+eureka:
+client:
+  service-url:
+    defaultZone: http://host.docker.internal:8761/eureka/
+  register-with-eureka: true
+  fetch-registry: true
 flyway:
   locations: classpath:db/migration
   schemas: places_schema
