--- a/places-service.yaml
+++ b/places-service.yaml
@@ -1,8 +1,8 @@
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/places?schema=places_schema
-    username: user
-    password: user
+    url: jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/places?schema=${DB_SCHEMA:places_schema}
+    username: ${DB_USERNAME:user}
+    password: ${DB_PASSWORD:user}
     driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
@@ -11,23 +11,26 @@ spring:
     show-sql: true
     properties:
       hibernate:
-        default_schema: places_schema
+        default_schema: ${DB_SCHEMA:places_schema}
     database-platform: org.hibernate.dialect.PostgreSQLDialect
   redis:
-    host: localhost
-    port: 6379
+    host: ${REDIS_HOST:localhost}
+    port: ${REDIS_PORT:6379}
   cache:
     type: redis
     redis:
       time-to-live: 600000
       cache-null-values: false
+
 eureka:
-client:
-  service-url:
-    defaultZone: http://localhost:8761/eureka/
-  register-with-eureka: true
-  fetch-registry: true
+  client:
+    service-url:
+      defaultZone: http://${EUREKA_HOST:host.docker.internal}:${EUREKA_PORT:8761}/eureka/
+    register-with-eureka: true
+    fetch-registry: true
+
 flyway:
   locations: classpath:db/migration
-  schemas: places_schema
+  schemas: ${DB_SCHEMA:places_schema}
   baseline-on-migrate: true
+
