--- a/discovery-service.yaml
+++ b/discovery-service.yaml
@@ -1,9 +1,9 @@
 server:
-  port: ${SERVER_PORT:8761}
+  port: 8761
 
 eureka:
   instance:
-    hostname: ${EUREKA_HOSTNAME:localhost}
+    hostname: localhost
   client:
     register-with-eureka: false
     fetch-registry: false
