--- a/places-service.yaml
+++ b/places-service.yaml
@@ -14,7 +14,7 @@ spring:
         default_schema: places_schema
     database-platform: org.hibernate.dialect.PostgreSQLDialect
   redis:
-    host: host.docker.internal
+    host: 10.10.146.230
     port: 6379
     password: foobared
   cache:
