--- a/auth-service.yaml
+++ b/auth-service.yaml
@@ -3,7 +3,12 @@ server:
 spring:
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: none
+    database: postgresql
+    show-sql: true
+    properties:
+      hibernate:
+        default_schema: account_schema
   data:
     redis:
       host: localhost
