--- a/user-service.yaml
+++ b/user-service.yaml
@@ -17,6 +17,11 @@ spring:
   jpa:
     hibernate:
       ddl-auto: none
+    database: postgresql
+    show-sql: true
+    properties:
+      hibernate:
+        default_schema: profile_schema
   datasource:
     url: jdbc:postgresql://10.10.146.230:5432/places?schema=profile_schema
     username: user_repo
