--- a/visualization-service.yaml
+++ b/visualization-service.yaml
@@ -4,7 +4,7 @@ spring:
       max-file-size: 100MB
       max-request-size: 100MB
   datasource:
-    url: jdbc:postgresql://localhost:5432/places?schema=visualization_schema
+    url: jdbc:postgresql://10.10.146.230:5432/places?schema=visualization_schema
     username: user
     password: user
     driver-class-name: org.postgresql.Driver
