--- a/auth-service.yaml
+++ b/auth-service.yaml
@@ -43,10 +43,12 @@ logging:
   level:
     org.springframework.security: DEBUG
 flyway:
+  enabled: true
   locations: classpath:db/migration
   schemas: account_schema
-
   baseline-on-migrate: true
+  create_schemas: true
+
 
 
 
