--- a/user-service.yaml
+++ b/user-service.yaml
@@ -22,6 +22,7 @@ spring:
     properties:
       hibernate:
         default_schema: profile_schema
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
   datasource:
     url: jdbc:postgresql://10.10.146.230:5432/profiles?schema=profile_schema
     username: user_repo
@@ -41,3 +42,4 @@ flyway:
   locations: classpath:db/migration
   schemas: profile_schema
   baseline-on-migrate: true
+
