--- a/auth-service.yaml
+++ b/auth-service.yaml
@@ -38,8 +38,8 @@ eureka:
       enabled: true
 jwt:
   expiration:
-    access: 600000
-    refresh: 3600000
+    access: 86400000
+    refresh: 2592000000
 logging:
   level:
     org.springframework.security: DEBUG
@@ -49,6 +49,7 @@ flyway:
   schemas: account_schema
   baseline-on-migrate: true
   create_schemas: true
+
 
 
 
