--- a/api-gateway.yaml
+++ b/api-gateway.yaml
@@ -12,34 +12,34 @@ spring:
             - id: auth-service-route
               uri: lb://auth-service
               predicates:
-                - Host=auth.api.t1.internship.10.10.146.230.nip.io:8010
+                - Path=/api/v1/auth/**
               filters:
                 - DedupeResponseHeader=Access-Control-Allow-Origin
             - id: user-service-route
               uri: lb://user-service
               predicates:
-                - Host=user.api.t1.internship.10.10.146.230.nip.io:8010
+                - Path=/api/v1/user/**, /api/v1/department/**
               filters:
                 - DedupeResponseHeader=Access-Control-Allow-Origin
                 - name: JwtUserEmailheaderFilter
             - id: order-service-route
               uri: lb://order-service
               predicates:
-                - Host=order.api.t1.internship.10.10.146.230.nip.io:8010
-              filters:
-                - DedupeResponseHeader=Access-Control-Allow-Origin
-                - name: JwtUserEmailheaderFilter
-            - id: places-service-route
-              uri: lb://places-service
-              predicates:
-                - Host=places.api.t1.internship.10.10.146.230.nip.io:8010
+                - Path=/api/v1/orders/**
               filters:
                 - DedupeResponseHeader=Access-Control-Allow-Origin
                 - name: JwtUserEmailheaderFilter
             - id: visualization-service-route
               uri: lb://visualization-service
               predicates:
-                - Host=visualization.api.t1.internship.10.10.146.230.nip.io:8010
+                - Path=/api/v1/floors/vis/**
+              filters:
+                - DedupeResponseHeader=Access-Control-Allow-Origin
+                - name: JwtUserEmailheaderFilter
+            - id: places-service-route
+              uri: lb://places-service
+              predicates:
+                - Path=/api/v1/locations/**, /api/v1/floors/**, /api/v1/spaces/**
               filters:
                 - DedupeResponseHeader=Access-Control-Allow-Origin
                 - name: JwtUserEmailheaderFilter
