--- a/auth-service.yaml
+++ b/auth-service.yaml
@@ -27,7 +27,7 @@ spring:
 eureka:
   instance:
     lease-renewal-interval-in-seconds: 30
-    hostname: localhost
+    hostname: auth-service
     appname: auth-service
   client:
     register-with-eureka: true
@@ -49,6 +49,7 @@ flyway:
   schemas: account_schema
   baseline-on-migrate: true
   create_schemas: true
+
 
 
 
