--- a/api-gateway.yaml
+++ b/api-gateway.yaml
@@ -77,7 +77,7 @@ management:
   endpoints:
     web:
       exposure:
-        include: health, info, metrics
+        include: health, info, metrics, gateway, mappings
     jmx:
       exposure:
         include: '*'
