--- a/api-gateway.yaml
+++ b/api-gateway.yaml
@@ -57,7 +57,7 @@ eureka:
   client:
     service-url:
       defaultZone: http://10.10.146.230:8761/eureka
-    register-with-eureka: false
+    register-with-eureka: true
     fetch-registry: true
     healthcheck:
       enabled: true
